# ultraLLM

./: .gitignore  README.md  green_symbolic.py  main.py  multi_engine_correction_layer.py  red_synthesis.py  yellow_retrieval.py
DATASET/: Green.yaml  Red.yaml  Yellow.yaml
DATASET/DATASET/: Red.yaml  Yellow.yaml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/engines/: __init__.py  common.py  green.py  red.py  yellow.py
backend/app/services/: __init__.py  conversations.py  ollama.py  orchestrator.py
backend/tests/: test_api.py  test_engines.py  test_ollama.py  test_orchestrator.py
chatbot-ui/: .gitignore  README.md  app.json  package-lock.json  package.json  red_synthesis.py  vitest.config.ts
chatbot-ui/app/: _layout.tsx  index.tsx
chatbot-ui/assets/: README.md
chatbot-ui/knowledge/interpretive/: Red.yaml
chatbot-ui/src/components/: ChatInput.tsx  MessageBubble.tsx  TypingIndicator.tsx
chatbot-ui/src/constants/: config.ts
chatbot-ui/src/hooks/: useChat.ts
chatbot-ui/src/services/: chatService.test.ts  chatService.ts
chatbot-ui/src/types/: chat.ts
chatbot-ui/src/utils/: chatInputKeyboard.test.ts  chatInputKeyboard.ts
